--- a/Ilaria-RVC-Mainline-Paperspace.ipynb
+++ b/Ilaria-RVC-Mainline-Paperspace.ipynb
@@ -131,7 +131,7 @@
     "%mkdir /notebooks/Ilaria-RVC-Mainline/assets/weights\n",
     "%mkdir /notebooks/Ilaria-RVC-Mainline/dataset\n",
     "%mkdir /notebooks/Ilaria-RVC-Mainline/audios\n",
-    "!pip install -r https://raw.githubusercontent.com/Dennoquellovero/Ilaria-RVC-Mainline-Paperspace/main/requirements-paperspace.txt\n",
+    "!pip install -r requirements-paperspace.txt\n",
     "clear_output()\n",
     "print(\"Finished Installing\")"
    ]
